       PARSE-DATE-AND-TIME
     - New *TIME-FIRST* and *YEAR-FIRST* variables
     - New WHITESPACE-CHAR-P function
     - Document PRINTVOT macro
     - Export SORTF and STABLE-SORTF macros
     - New MAKE-HASH-VALUES-VECTOR and SORTED-MAPHASH functions
     - Support user-provided string-coalescing hash table in 
       WITH-READING-SAVED/SENT-OBJECTS-BLOCK

  * Changes to GBBopen
     - New *SKIP-DELETED-UNIT-INSTANCE-CLASS-CHANGE* and 
       *REPOSITORY-LOAD-PERCENTAGE-HOOK-FUNCTIONS* variables
     - New CHECK-ALL-INSTANCE-LINKS and CHECK-INSTANCE-LOCATORS functions
     - New WITH-BLACKBOARD-REPOSITORY-LOCKED macro
     - Documented *FIND-VERBOSE*, *USE-MARKING*, CHECK-FOR-DELETED-INSTANCE

  * Changes to GBBopen Extensions
     - Experimental journaling and network-streaming

  * Changes to Agenda Shell
     - New CONTROL-SHELL-HIBERNATING/AWAKENED-EVENT abstract control-shell
       event and CONTROL-SHELL-AWAKENED-EVENT control-shell event


Important changes in GBBopen 1.5:

  * Changes to gbbopen-modules directory processing
     - New *GBBOPEN-MODULES-DIRECTORY-VERBOSE* and *SYM-FILE-VERBOSE* 
       global variables

  * Changes to extended-REPL commands
     - New :lmf (LOAD-MODULE-FILE) REPL command

  * Changes to Module Manager
     - Add :skip-recompile module file option

  * Changes to GBBopen Tools
     - New ASSQ function
     - New DEFCONSTRUCT cons-based 2-field "structure"
     - New DELQ-ONE function
     - New HTTP-DATE-AND-TIME function
     - Change argument order of ENCODE-TIME-OF-DAY
     - New left-leaning red-black (LLRB) tree entities
     - New auto-transitioning EQ set (EQSET), EQ table (ET), and
       auto-transitioning ("fast hash-table") ATABLE entities

  * New :double-metaphone module

  * New :gbbopen-tools-user module

  * Changes to Portable Threads
     - New ATOMIC-INCF& and ATOMIC-DECF& macros
     - Scheduled and periodic function entities moved into a 
       separate file (scheduled-periodic-functions.lisp)
