@@ -62,6 +62,6 @@
 <li><a href="ref-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;August 20, 2011</nobr>
-<nobr>6:10&nbsp;EDT</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;August 22, 2011</nobr>
+<nobr>12:08&nbsp;EDT</nobr></address><br />
 </body></html>
